# CodeAtlas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS_SUMMARY.md  FIXES_APPLIED.md  INSTALLATION.md  LICENSE  MANIFEST.in  NEW_FEATURES.md  PROJECT_SUMMARY.md  README.MD  README.md  UI_IMPROVEMENTS.md  install.bat  install.py  install.sh  pyproject.toml  requirements.txt  setup_verification.py
.github/workflows/: ci.yml
codeatlas/: __init__.py  __main__.py  cache.py  cleanup.py  cli.py  code_quality.py  comment_editor.py  comment_parser.py  config.py  dead_code_detector.py  dependency_checker.py  duplication_detector.py  export.py  git_integration.py  language_detector.py  license_checker.py  plugin_system.py  scanner.py  security_scanner.py  tree_generator.py  tui.py
codeatlas_plugins/: __init__.py  example_plugin.py
tests/: __init__.py  test_comment_parser.py  test_export.py  test_git_integration.py  test_language_detector.py  test_scanner.py
